started refactor userview
